wow too much margin fix this please

--- a/wp-content/themes/motherjones/style.css
+++ b/wp-content/themes/motherjones/style.css
@@ -1495,7 +1495,7 @@ h2.widget-title {
   padding: 0;
 }
 #kdrum-post-list li {
-  margin-top: 30px;
+  margin-top: 4px;
   padding-top: 30px;
   border-top: 1px solid #ccc;
 }
